# duckc

./: .gitignore  CNAME  Cargo.toml  README.md  abc.duck  array_list_test.duck  await.duck  await2.duck  await3.duck  bug.duck  doc_testi.duck  docs_output.html  duck-version-info.json  fetch_test.duck  generics_overflow.duck  hash_map.duck  http.duck  http2.duck  index.html  install_std.sh  issues.html  lambdas.duck  lambdas2.duck  lol.duck  main.duck  main.go  main.html  main2.duck  mongo.duck  mutability.duck  mutex_test.duck  random.duck  return_without_semicolon.duck  rust-toolchain.toml  showcase.duck  simple_html.duck  small_gen_test.duck  strings.duck  struct_test.duck  test.go  (+5 more)
.cargo/: config.toml
benchmarks/: bench.duck
docs/: 001-getting-started.md  002-dargo.md  003-foundation-intro.md  004-foundation-primitive-values.md  005-foundation-variables.md  006-foundation-functions.md  007-foundation-modules.md  007-foundation-pass-operator.md  008-foundation-comments.md  008-foundation-modules.md  009-foundation-comments.md  009-foundation-control-flow.md  010-advanced-intro.md  010-foundation-control-flow.md  010-foundation-structs.md  011-advanced-typesystem.md  011-foundation-ducks.md  011-foundation-structs.md  012-advanced-function-penetration.md  012-advanced-intro.md  012-foundation-ducks.md  013-advanced-go-interop.md  013-advanced-intro.md  013-advanced-typesystem.md  014-advanced-function-penetration.md  014-advanced-typesystem.md  015-advanced-go-interop.md  016-advanced-sus-funs.md  README.md  dargo.md  getting_started.md  intro.md
src/: main.rs  (+4 more)
(+852 files in other folders)
