[workspace]
members = [".", "tests/test_runner", "macros"]

[package]
name = "dargo"
version = "0.1.0"
edition = "2024"

[dependencies]
duckc-macros = { path = "macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = false
strip = true
split-debuginfo = "off"
lto = true
